# Vision-Guardian

./: .gitignore  README.md  SceneryDetector.py  app.py  danger_mapped_yolo.json  index.html  map_danger_json.py  object_detection_speech.py  places_model_loader.py  pyproject.toml  requirements.txt  tempCodeRunnerFile.py
data/: danger_objects.json
scripts/: SceneryDetector.py  face_detection.py  object_detection_speech.py  text_reader.py
src/: main.py
templates/: index.html
utils/: voice_command_utils.py  voice_commands.py
